23/April/2020 - Fix 8.1:
 
 - Fixed bug that crashes the software when the file that stores public logins are missing

23/April/2020 - Version 8:
 - Fixed error when viewing login details after deleting it out of the program
 - Added function to store logins publicly
 - View publicly stored logins
 - Remove publicly stored logins function added
 - Re-created the main menu for easier access
 - Sorted Variables at start up for other coders change easily
 - Minor changes

22/April/2020 - Version 7:

 - Minor changes
 - Using SHA512 hashing instead of MD5 hashing for more safety
 - Added new function to delete account and data with it
 - Changed Menu visuals

22/April/2020 - Version 6:

 - Added new change login details function (Major!) (This took me so f**king long)
 - Limited user login details storage to 9999 lines of information
 - Minor bug fixes
 - Changed strings and comments in code for better understanding

22/April/2020 - Version 5:

 - Minor bug fixes
 - Changed the restart function
 - Can now bulk delete stored login details 
 - Attempeted to create single user preferrences (removed, because was too hard)

21/April/2020 - Version 4:
 - Created function to read stored login details
 - Created funtciton to delete login details
 - Created function for user to restart the program(currently windows only)
 - Created function for user to exit the program on main menu
 - Automatically changes console title to a set name in the code (currently windows only)
 - More file integrity detection
 - Minor changes to strings for information towards users

21/April/2020 - Version 3:

 - Made the storing data function ready to work
 - Added base64 encryption function
 - Added base64 decryption function
 - Added file integrity detection inside storing data function (this could be changed and improved)
 - Minor changes within strings to inform user correctly

21/April/2020 - Version 2:

 - Created log out function
 - Windows users could customize console title