@@ -1,3 +1,6 @@
+27/April/2020 - Fix 9:
+ - Minor Changes
+
 23/April/2020 - Fix 8.1:
  
  - Fixed bug that crashes the software when the file that stores public logins are missing
